# xm_object_cui

./: CMakeLists.txt  README.txt  package.xml
config/object_recognition/: image.xml  name.txt  obj_name.txt  width.txt
msg/: num.msg
src/: Filter.cpp  Filter.h  Train.cpp  Train.h  ar.cpp  cluster_extraction.cpp  detect.cpp  detect.h  detection(1)  get_box.cpp  getobject.cpp  main.cpp  main_test.cpp  main_test1.cpp  rosgetimage.cpp  rosgetimage.h
src/include/: FerNNClassifier.h  LKTracker.h  TLD.h  tracking.h
src/tld/: reading_image.cpp  sub.cpp  sub.h  tracking.cpp  tracking.h
src/tld/src/: FerNNClassifier.cpp  LKTracker.cpp  TLD.cpp  run_tld.cpp  tld_utils.cpp  tracking.cpp
